--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,21 +40,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "# from pprint import pprint\n",
     "# from lxml import html\n",
     "# from lxml.html import fromstring\n",
-    "# import urllib.request\n",
+    "#import urllib.request\n",
     "# from urllib.request import urlopen\n",
     "# import random\n",
-    "# import re\n",
-    "# import scrapy"
+    "import re\n",
+    "# import scrapy\n",
+    "\n",
+    "import urllib.request as urllib2\n"
    ]
   },
   {
@@ -66,21 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/developers'"
+    "url1 = 'https://github.com/trending/developers'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "res1 = req.get(url1)\n"
    ]
   },
   {
@@ -134,11 +136,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alan Shaw @alanshaw\n",
+      "Mark Bates @markbates\n",
+      "Ellen Shapiro @designatednerd\n",
+      "Jared Palmer @jaredpalmer\n",
+      "Philip Walton @philipwalton\n",
+      "Christophe Coevoet @stof\n",
+      "Robert Mosolgo @rmosolgo\n",
+      "Frank S. Thomas @fthomas\n",
+      "Leonid Bugaev @buger\n",
+      "Björn Kimminich @bkimminich\n",
+      "Sean McArthur @seanmonstar\n",
+      "Artem Sapegin @sapegin\n",
+      "Josh Matthews @jdm\n",
+      "Sami Vaarala @svaarala\n",
+      "Dylan Vann @DylanVann\n",
+      "Andrew Clark @acdlite\n",
+      "Brian Flad @bflad\n",
+      "David Rodríguez @deivid-rodriguez\n",
+      "Luke Kysow @lkysow\n",
+      "EGOIST @egoist\n",
+      "Ash Furrow @ashfurrow\n",
+      "John Papa @johnpapa\n",
+      "Nathan Shively-Sanders @sandersn\n",
+      "Sheng Chen @jdneo\n",
+      "Magnus Edenhill @edenhill\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "soup1 = BeautifulSoup(res1.text, 'html.parser')\n",
+    "\n",
+    "developpers = soup1.select('h1.h3 a')\n",
+    "for dev in developpers:\n",
+    "    print(dev.text,  dev.attrs['href'].replace('/', '@'))\n"
    ]
   },
   {
@@ -152,21 +190,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/python?since=daily'"
+    "url2 = 'https://github.com/trending/python?since=daily'\n",
+    "res2 = req.get(url2)\n",
+    "soup2 = BeautifulSoup(res2.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "sherlock-project / sherlock\n",
+      "\n",
+      "\n",
+      "\n",
+      "sfyc23 / EverydayWechat\n",
+      "\n",
+      "\n",
+      "\n",
+      "P1sec / QCSuper\n",
+      "\n",
+      "\n",
+      "\n",
+      "vaexio / vaex\n",
+      "\n",
+      "\n",
+      "\n",
+      "hhyo / Archery\n",
+      "\n",
+      "\n",
+      "\n",
+      "awslabs / serverless-application-model\n",
+      "\n",
+      "\n",
+      "\n",
+      "apache / airflow\n",
+      "\n",
+      "\n",
+      "\n",
+      "Alivon / Panda-Learning\n",
+      "\n",
+      "\n",
+      "\n",
+      "NVlabs / DG-Net\n",
+      "\n",
+      "\n",
+      "\n",
+      "kekingcn / kkFileView\n",
+      "\n",
+      "\n",
+      "\n",
+      "qubvel / segmentation_models\n",
+      "\n",
+      "\n",
+      "\n",
+      "ildoonet / tf-pose-estimation\n",
+      "\n",
+      "\n",
+      "\n",
+      "gto76 / python-cheatsheet\n",
+      "\n",
+      "\n",
+      "\n",
+      "PacktPublishing / Advanced-Deep-Learning-with-Keras\n",
+      "\n",
+      "\n",
+      "\n",
+      "sc1341 / InstagramOSINT\n",
+      "\n",
+      "\n",
+      "\n",
+      "xinshuoweng / AB3DMOT\n",
+      "\n",
+      "\n",
+      "\n",
+      "13o-bbr-bbq / machine_learning_security\n",
+      "\n",
+      "\n",
+      "\n",
+      "kovidgoyal / calibre\n",
+      "\n",
+      "\n",
+      "\n",
+      "home-assistant / home-assistant\n",
+      "\n",
+      "\n",
+      "\n",
+      "cool-RR / PySnooper\n",
+      "\n",
+      "\n",
+      "\n",
+      "facebookresearch / XLM\n",
+      "\n",
+      "\n",
+      "\n",
+      "tianzhi0549 / FCOS\n",
+      "\n",
+      "\n",
+      "\n",
+      "rusty1s / pytorch_geometric\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "repos = soup2.select('h1.h3 a')\n",
+    "for rep in repos:\n",
+    "    print(rep.text)"
    ]
   },
   {
@@ -178,21 +319,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'"
+    "url3 = 'https://en.wikipedia.org/wiki/Walt_Disney'\n",
+    "res3 = req.get(url3)\n",
+    "soup3 = BeautifulSoup(res3.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "//upload.wikimedia.org/wikipedia/en/thumb/e/e7/Cscr-featured.svg/20px-Cscr-featured.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/1/1b/Semi-protection-shackle.svg/20px-Semi-protection-shackle.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/d/df/Walt_Disney_1946.JPG/220px-Walt_Disney_1946.JPG\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/8/87/Walt_Disney_1942_signature.svg/150px-Walt_Disney_1942_signature.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Walt_Disney_envelope_ca._1921.jpg/220px-Walt_Disney_envelope_ca._1921.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Newman_Laugh-O-Gram_%281921%29.webm/220px-seek%3D2-Newman_Laugh-O-Gram_%281921%29.webm.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Trolley_Troubles_poster.jpg/170px-Trolley_Troubles_poster.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/7/71/Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg/170px-Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/4/4e/Steamboat-willie.jpg/170px-Steamboat-willie.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/5/57/Walt_Disney_1935.jpg/170px-Walt_Disney_1935.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg/220px-Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/15/Disney_drawing_goofy.jpg/170px-Disney_drawing_goofy.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/13/DisneySchiphol1951.jpg/220px-DisneySchiphol1951.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/8/8c/WaltDisneyplansDisneylandDec1954.jpg/220px-WaltDisneyplansDisneylandDec1954.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Walt_disney_portrait_right.jpg/170px-Walt_disney_portrait_right.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Walt_Disney_Grave.JPG/170px-Walt_Disney_Grave.JPG\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Roy_O._Disney_with_Company_at_Press_Conference.jpg/170px-Roy_O._Disney_with_Company_at_Press_Conference.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Disney_Display_Case.JPG/170px-Disney_Display_Case.JPG\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Disney1968.jpg/170px-Disney1968.jpg\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/8/8a/OOjs_UI_icon_edit-ltr-progressive.svg/10px-OOjs_UI_icon_edit-ltr-progressive.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/d/da/Animation_disc.svg/30px-Animation_disc.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/6/69/P_vip.svg/29px-P_vip.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Magic_Kingdom_castle.jpg/24px-Magic_Kingdom_castle.jpg\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/e/e7/Video-x-generic.svg/30px-Video-x-generic.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Flag_of_Los_Angeles_County%2C_California.svg/30px-Flag_of_Los_Angeles_County%2C_California.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/a/a3/USA_flag_on_television.svg/30px-USA_flag_on_television.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/4/4a/Commons-logo.svg/22px-Commons-logo.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikiquote-logo.svg/25px-Wikiquote-logo.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/30px-Wikidata-logo.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/8/8a/OOjs_UI_icon_edit-ltr-progressive.svg/10px-OOjs_UI_icon_edit-ltr-progressive.svg.png\n",
+      "//en.wikipedia.org/wiki/Special:CentralAutoLogin/start?type=1x1\n",
+      "/static/images/wikimedia-button.png\n",
+      "/static/images/poweredby_mediawiki_88x31.png\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "images = soup3.find_all('img', src=True)\n",
+    "for img in images:\n",
+    "    print(img['src'])"
    ]
   },
   {
@@ -204,21 +389,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://en.wikipedia.org/wiki/Python' "
+    "url4 ='https://en.wikipedia.org/wiki/Python' \n",
+    "res4 = req.get(url4)\n",
+    "soup4 = BeautifulSoup(res4.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/wiki/Pythonidae', '/wiki/Python_(genus)', '/wiki/Python_(mythology)', '/wiki/Python_of_Aenus', '/wiki/Python_(painter)', '/wiki/Python_of_Byzantium', '/wiki/Python_of_Catana', '/wiki/Python_(film)', '/wiki/Pythons_2', '/wiki/Monty_Python', '/wiki/Python_(Monty)_Pictures', '/wiki/Python_(programming_language)', '/wiki/CPython', '/wiki/CMU_Common_Lisp', '/wiki/PERQ#PERQ_3', '/wiki/Python_(Busch_Gardens_Tampa_Bay)', '/wiki/Python_(Coney_Island,_Cincinnati,_Ohio)', '/wiki/Python_(Efteling)', '/wiki/Python_(automobile_maker)', '/wiki/Python_(Ford_prototype)', '/wiki/Colt_Python', '/wiki/Python_(missile)', '/wiki/Python_(nuclear_primary)', '/wiki/Python_Anghelo', '/wiki/PYTHON', '/wiki/Cython', '/wiki/Pyton', '/wiki/Category:Disambiguation_pages', '/wiki/Category:Disambiguation_pages_with_short_description', '/wiki/Category:All_article_disambiguation_pages', '/wiki/Category:All_disambiguation_pages', '/wiki/Category:Animal_common_name_disambiguation_pages']\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "#soup.select('a[href^=\"http://example.com/\"]')\n",
+    "\n",
+    "# for link in soup.find_all('a'):\n",
+    "#     print(link.get('href'))\n",
+    "\n",
+    "links = []\n",
+    "links_wiki = soup4.select('div.mw-body-content ul li a[href^=\"/wiki\"]')\n",
+    "\n",
+    "for lin in links_wiki:\n",
+    "    links.append(lin.get('href'))\n",
+    "print(links)\n",
+    "\n"
    ]
   },
   {
@@ -230,21 +436,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'http://uscode.house.gov/download/download.shtml'"
+    "url5 = 'http://uscode.house.gov/download/download.shtml'\n",
+    "res5 = req.get(url5)\n",
+    "soup5 = BeautifulSoup(res5.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "          Title 2 - The Congress\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 6 - Domestic Security\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 7 - Agriculture\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 15 - Commerce and Trade\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 16 - Conservation\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 19 - Customs Duties\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 21 - Food and Drugs\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 26 - Internal Revenue Code\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 34 - Crime Control and Law Enforcement\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 38 - Veterans' Benefits\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 42 - The Public Health and Welfare\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 43 - Public Lands\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 48 - Territories and Insular Possessions\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 49 - Transportation\n",
+      "\n",
+      "        \n",
+      "\n",
+      "\n",
+      "          Title 50 - War and National Defense\n",
+      "\n",
+      "        \n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "changes = soup5.select('div.uscitemlist div.usctitlechanged')\n",
+    "for chng in changes:\n",
+    "    print(chng.text)"
    ]
   },
   {
@@ -256,21 +548,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.fbi.gov/wanted/topten'"
+    "url6 = 'https://www.fbi.gov/wanted/topten'\n",
+    "res6 = req.get(url6)\n",
+    "soup6 = BeautifulSoup(res6.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ALEJANDRO ROSALES CASTILLO', 'YASER ABDEL SAID', 'JASON DEREK BROWN', 'RAFAEL CARO-QUINTERO', 'ALEXIS FLORES', 'EUGENE PALMER', 'SANTIAGO VILLALBA MEDEROS', 'ROBERT WILLIAM FISHER', 'BHADRESHKUMAR CHETANBHAI PATEL', 'ARNOLDO JIMENEZ']\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code "
+    "wanted_fbi = []\n",
+    "fbi_wanted = soup6.select('h3.title a')\n",
+    "for wanted in fbi_wanted:\n",
+    "    wanted_fbi.append(wanted.get_text())\n",
+    "    \n",
+    "print(wanted_fbi)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
