--- a/module-2/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-2/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -535,53 +535,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
+       "      <th>CustomerID</th>\n",
        "      <th>amount_spent</th>\n",
        "      <th>Label</th>\n",
+       "      <th>Country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>138521.31</td>\n",
+       "      <th>155484</th>\n",
+       "      <td>14646</td>\n",
+       "      <td>280206.02</td>\n",
        "      <td>VIP Customers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>10198.68</td>\n",
-       "      <td>VIP Customers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Bahrain</td>\n",
-       "      <td>548.40</td>\n",
-       "      <td>Other</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>41196.34</td>\n",
-       "      <td>VIP Customers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>1143.60</td>\n",
-       "      <td>Other</td>\n",
+       "      <td>Netherlands</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country  amount_spent          Label\n",
-       "0  Australia     138521.31  VIP Customers\n",
-       "1    Austria      10198.68  VIP Customers\n",
-       "2    Bahrain        548.40          Other\n",
-       "3    Belgium      41196.34  VIP Customers\n",
-       "4     Brazil       1143.60          Other"
+       "        CustomerID  amount_spent          Label      Country\n",
+       "155484       14646     280206.02  VIP Customers  Netherlands"
       ]
      },
      "execution_count": 6,
@@ -591,10 +565,9 @@
    ],
    "source": [
     "# Country with most VIP Customers.\n",
-    "# Repito la misma operación que al princpio del challenge pero agrupando por países\n",
-    "orders_country = orders.groupby(['Country']).agg('sum')['amount_spent'].reset_index()\n",
-    "orders_country['Label'] = orders_country['amount_spent'].apply(Label)\n",
-    "orders_country.head()"
+    "\n",
+    "orders_country = orders_aggregate.merge(orders[['CustomerID', 'Country']], on='CustomerID').drop_duplicates()\n",
+    "orders_country.sort_values(by=['amount_spent'], ascending=False).head(1)"
    ]
   },
   {
@@ -604,72 +577,9 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Label</th>\n",
-       "      <th>amount_spent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>VIP Customers</td>\n",
-       "      <td>7.308392e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>VIP Customers</td>\n",
-       "      <td>2.854463e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>EIRE</td>\n",
-       "      <td>VIP Customers</td>\n",
-       "      <td>2.655459e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>VIP Customers</td>\n",
-       "      <td>2.288671e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>France</td>\n",
-       "      <td>VIP Customers</td>\n",
-       "      <td>2.090240e+05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           Country          Label  amount_spent\n",
-       "35  United Kingdom  VIP Customers  7.308392e+06\n",
-       "23     Netherlands  VIP Customers  2.854463e+05\n",
-       "10            EIRE  VIP Customers  2.655459e+05\n",
-       "14         Germany  VIP Customers  2.288671e+05\n",
-       "13          France  VIP Customers  2.090240e+05"
+       "United Kingdom    932\n",
+       "Name: Country, dtype: int64"
       ]
      },
      "execution_count": 15,
@@ -678,20 +588,10 @@
     }
    ],
    "source": [
-    "# Agrupa ahora por país y etiqueta para ver cuál suma + cantidad de dinero y, por tanto, más VIP Customers.\n",
-    "orders_country = orders_country.groupby(['Country', 'Label']).agg('sum')['amount_spent'].reset_index().sort_values(by='amount_spent', ascending=False)\n",
-    "orders_country.head()\n",
+    "#Q3 : Country with VIP and Customers Preferred combined\n",
     "\n",
-    "#United Kingdom tiene más VIP Customers\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Q3 : Country with VIP and Customers Preferred combined\n"
+    "vip_preferred = orders_country[(orders_country['Label']=='VIP Customers') | (orders_country['Label']=='Preferred Customers')]\n",
+    "vip_preferred['Country'].value_counts().head(1)"
    ]
   }
  ],
