--- a/module-2/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-2/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
    "source": [
     "#Q3 : Country with VIP and Customers Preferred combined\n",
     "\n",
-    "vip_preferred = orders_country[(orders_country['Label']=='VIP Customers') | (orders_country['Label']=='Preferred Customers')]\n",
+    "vip_preferred = orders_country[(orders_country['Label']!='Other')]\n",
     "vip_preferred['Country'].value_counts().head(1)"
    ]
   }
