--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "         1,  0]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "Name: Name, Length: 800, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
     "pokemon[\"Name\"].replace(\"^(.*?)Mega\", \"\", regex = True)\n",
     "\n",
     "# Nota para el futuro -->\n",
-    "# ->( )<- Todo lo que esté dentro delparéntesis hará referencia a lo que va delante de la palabra Mega.\n",
+    "# ->( )<- Todo lo que esté dentro del paréntesis hará referencia a lo que va delante de la palabra Mega.\n",
     "# ->^<- Marca el principio de la string\n",
     "# ->.*<- El punto y asterisco es para coger cualquier caracter, la ? es para marcar el tope hasta el que coger \n",
     "\n",
@@ -901,9 +901,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['#', 'Name', 'Type 1', 'Type 2', 'Total', 'HP', 'Attack', 'Defense',\n",
+      "       'Sp. Atk', 'Sp. Def', 'Speed', 'Generation', 'Legendary'],\n",
+      "      dtype='object')\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -921,7 +930,7 @@
    ],
    "source": [
     "# your code here\n",
-    "pokemon.columns\n",
+    "print(pokemon.columns)\n",
     "\n",
     "pokemon[\"A/D Ratio\"] = pokemon[\"Attack\"]/pokemon[\"Defense\"]\n",
     "\n",
@@ -937,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +957,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +990,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1022,62 +1031,62 @@
        "Normal-Flying      24\n",
        "Fighting           20\n",
        "Bug                17\n",
-       "Poison             15\n",
-       "Grass-Poison       15\n",
        "Fairy              15\n",
+       "Grass-Poison       15\n",
+       "Poison             15\n",
        "Bug-Flying         14\n",
        "Ice                13\n",
        "Ground             13\n",
        "Bug-Poison         12\n",
        "Dragon             11\n",
-       "Water-Ground       10\n",
        "Dark               10\n",
+       "Water-Ground       10\n",
        "Ghost-Grass        10\n",
        "Ghost              10\n",
        "Rock                9\n",
-       "Bug-Steel           7\n",
-       "Steel-Psychic       7\n",
        "Water-Flying        7\n",
        "Fire-Fighting       7\n",
-       "Fire-Flying         6\n",
-       "Bug-Grass           6\n",
+       "Bug-Steel           7\n",
+       "Steel-Psychic       7\n",
+       "Dragon-Flying       6\n",
        "Psychic-Flying      6\n",
-       "Rock-Water          6\n",
+       "Psychic-Fairy       6\n",
+       "Water-Dark          6\n",
        "                   ..\n",
-       "Psychic-Ghost       1\n",
-       "Fire-Dragon         1\n",
-       "Water-Steel         1\n",
-       "Fighting-Flying     1\n",
-       "Ground-Fire         1\n",
-       "Fire-Steel          1\n",
-       "Poison-Dragon       1\n",
-       "Bug-Ghost           1\n",
-       "Poison-Bug          1\n",
        "Grass-Dragon        1\n",
-       "Steel-Dragon        1\n",
-       "Electric-Dragon     1\n",
-       "Dragon-Fairy        1\n",
-       "Normal-Water        1\n",
+       "Bug-Water           1\n",
        "Rock-Fighting       1\n",
-       "Electric-Grass      1\n",
+       "Dragon-Electric     1\n",
+       "Ice-Ghost           1\n",
+       "Grass-Ground        1\n",
+       "Electric-Ghost      1\n",
+       "Ground-Electric     1\n",
+       "Dragon-Fairy        1\n",
+       "Bug-Ghost           1\n",
        "Electric-Fairy      1\n",
-       "Electric-Ice        1\n",
-       "Electric-Fire       1\n",
-       "Dragon-Fire         1\n",
+       "Psychic-Grass       1\n",
+       "Electric-Grass      1\n",
+       "Poison-Dragon       1\n",
+       "Ground-Fire         1\n",
+       "Steel-Fighting      1\n",
+       "Fire-Steel          1\n",
+       "Normal-Water        1\n",
+       "Fire-Rock           1\n",
+       "Electric-Dragon     1\n",
+       "Normal-Ground       1\n",
+       "Fire-Dragon         1\n",
+       "Psychic-Dark        1\n",
+       "Electric-Water      1\n",
+       "Water-Steel         1\n",
        "Steel-Flying        1\n",
        "Ghost-Dark          1\n",
-       "Electric-Water      1\n",
-       "Grass-Ground        1\n",
-       "Normal-Ground       1\n",
-       "Ground-Electric     1\n",
-       "Electric-Ghost      1\n",
-       "Psychic-Grass       1\n",
-       "Fire-Water          1\n",
-       "Fire-Rock           1\n",
+       "Fighting-Dark       1\n",
+       "Psychic-Fire        1\n",
+       "Ground-Steel        1\n",
        "Name: Combo Type, Length: 154, dtype: int64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1127,7 @@
        "0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1205,7 @@
        "348               Sharpedo      3.000"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1440,7 @@
        "Bug-Flying    72.857143   69.071429  82.857143   2.857143       0.0  1.146274  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
