still on the 3th

--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -70,6 +70,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>#</th>\n",
        "      <th>Name</th>\n",
        "      <th>Type 1</th>\n",
@@ -88,6 +89,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>Bulbasaur</td>\n",
        "      <td>Grass</td>\n",
@@ -104,6 +106,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>Ivysaur</td>\n",
        "      <td>Grass</td>\n",
@@ -120,6 +123,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>Venusaur</td>\n",
        "      <td>Grass</td>\n",
@@ -137,6 +141,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>VenusaurMega Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
@@ -152,6 +157,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>Charmander</td>\n",
        "      <td>Fire</td>\n",
@@ -171,12 +177,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
-       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
-       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
-       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
-       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "   index  #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0      0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1      1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2      2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3      3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4      4  4             Charmander   Fire     NaN    309  39      52       43   \n",
        "\n",
        "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
        "0       65       65     45           1      False  \n",
@@ -193,6 +199,7 @@
    "source": [
     "# Importing the dataset from Ironhack's database\n",
     "pokemon = pd.read_csv(\"Pokemon.csv\")\n",
+    "pokemon.reset_index(inplace=True)\n",
     "display(pokemon.head())"
    ]
   },
