--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,19 +236,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CustomerID\n",
+      "14911    143825.06\n",
+      "16446    168472.50\n",
+      "17450    194550.79\n",
+      "18102    259657.30\n",
+      "14646    280206.02\n",
+      "Name: amount_spent, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "sub_p1 = orders.groupby(\"CustomerID\").agg(\"sum\")[\"amount_spent\"].sort_values()\n",
+    "print(sub_p1.tail())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67.5\n",
+      "19.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "quantile95 = orders[\"amount_spent\"].quantile(0.95)\n",
+    "print(quantile95)\n",
+    "quantile75 = orders[\"amount_spent\"].quantile(0.75)\n",
+    "print(quantile75)"
+   ]
   },
   {
    "cell_type": "code",
@@ -272,7 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n"
    ]
   },
   {
