updating few things

--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -255,7 +255,8 @@
    ],
    "source": [
     "# your code here\n",
-    "\n",
+    "# We aggregate the amount spent by picking up the serie CustomerID and\n",
+    "# sorting all by amount_spent. We pick the tail on this case\n",
     "sub_p1 = orders.groupby(\"CustomerID\").agg(\"sum\")[\"amount_spent\"].sort_values()\n",
     "print(sub_p1.tail())"
    ]
@@ -275,6 +276,8 @@
     }
    ],
    "source": [
+    "# We calculate the percentiles\n",
+    "\n",
     "quantile95 = orders[\"amount_spent\"].quantile(0.95)\n",
     "print(quantile95)\n",
     "quantile75 = orders[\"amount_spent\"].quantile(0.75)\n",
@@ -299,12 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code here\n",
-    "\n"
+    "\n",
+    "no_duplicates = orders[['CustomerID','Country']].drop_duplicates()\n",
+    "# We delete all duplicate values \n"
    ]
   },
   {
